@@ -1,3 +1,10 @@
+2002-11-16  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
+
+	* w3m 0.3.2 branch: backport from trunk
+	* [w3m-dev 03438] Re: segmentation fault by large complex table.
+	* table.c (check_table_height): check MAXROWCELL
+	* table.h (MAXROWCELL): added
+
 2002-11-26  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
 
 	* w3m 0.3.2 branch: backport from trunk
@@ -4114,4 +4121,4 @@ a	* [w3m-dev 03276] compile error on EWS4800
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.467.4.1 2002/11/26 07:09:09 ukai Exp $
+$Id: ChangeLog,v 1.467.4.2 2002/11/26 07:10:18 ukai Exp $
